--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "8.6.0"
+  },
   "scripts": {
     "start": "node server.js" ,
     "dev": "concurrently 'nodemon server.js' 'cd client && npm start'",  
