--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "node": "8.6.0"
   },
   "scripts": {
-    "start": "node server.js" ,
-    "dev": "concurrently 'nodemon server.js' 'cd client && npm start'",  
+    "start": "node server.js",
+    "dev": "concurrently 'nodemon server.js' 'cd client && npm start'",
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "cd client && npm install && npm run build"
   },
@@ -24,10 +24,13 @@
   },
   "homepage": "https://github.com/Jadenpoole3/Project3#readme",
   "dependencies": {
+    "axios": "^0.16.2",
     "body-parser": "^1.18.2",
     "concurrently": "^3.5.0",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
-    "mongoose": "^4.12.1"
+    "mongoose": "^4.12.1",
+    "react-router-dom": "^4.2.2",
+    "styled-components": "^2.2.1"
   }
 }
